adding main content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li> 
-                    <a href="#projects">projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -25,4 +25,21 @@
             </ul>
         </nav>
     </header>
+    <article class="content">
+        <main id="Projects" class="text-color">
+            <h2>Projects</h2>
+        </main>
+        <main id="Contact" class="text-color">
+            <h2>Contact</h2>
+            <p id=contacts>#555-555-5555 email SamuelLutz88@gmail.com Linkdin <a href="https://www.linkedin.com/in/samuel-lutz-77138020b/"> Samuel Lutz
+
+            </p>
+        </main>
+        <main id="Resume" class="text-color">
+           <h2>Resume</h2>
+        </main>
+    </article>
+    <footer>
+        Created by Samuel Lutz
+    </footer>
 </body>
