push after hyperlink fix

--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
         </main>
         <main id="Contact" class="text-color">
             <h2>Contact</h2>
-            <p id=contacts>#555-555-5555 email SamuelLutz88@gmail.com Linkdin <a href="https://www.linkedin.com/in/samuel-lutz-77138020b/"> Samuel Lutz
-
-            </p>
+            <p id=contact-info>#555-555-5555 email SamuelLutz88@gmail.com Linkdin <a href="https://www.linkedin.com/in/samuel-lutz-77138020b/"> Samuel Lutz</a></p>
         </main>
         <main id="Resume" class="text-color">
            <h2>Resume</h2>
         </main>
     </article>
     <footer>
-        Created by Samuel Lutz
+       <p> Created by Samuel Lutz </p>
     </footer>
 </body>
