fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </main>
         <main id="Contact" class="text-color" class="Projects">
             <h2>Contact</h2>
-            <p class="contact-info">#555-555-5555 email:SamuelLutz88@gmail.com     Linkdin:<a href="https://www.linkedin.com/in/samuel-lutz-77138020b/">SamuelLutz</a></p>
+            <p class="contact-info">#555-555-5555 E-mail:SamuelLutz88@gmail.com     Linkdin:<a href="https://www.linkedin.com/in/samuel-lutz-77138020b/">SamuelLutz</a></p>
         </main>
         <main id="Resume" class="text-color" class="Projects">
            <h2>Resume</h2>
