--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Contact">Contact</a></li>
                 <li><a href="#Resume">Resume</a></li>
+                <li><a href="#Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -29,12 +29,13 @@
               <img src="https://samuellutz.github.io/first-homework/assets/images/digital-marketing-meeting.jpg" width=875px height="575px" alt="picture of a meeting">
             </a>
         </main>
+        <main id="Resume" class="text-color" class="Projects">
+           <h2>Resume</h2>
+           <img src="C:\Users\samlu\OneDrive\Desktop\second-homework\second-homework\Sam Online Resume.docx.pdf" alt="resume">
+        </main>
         <main id="Contact" class="text-color" class="Projects">
             <h2>Contact</h2>
             <p class="contact-info">#555-555-5555 E-mail:SamuelLutz88@gmail.com     Linkdin:<a href="https://www.linkedin.com/in/samuel-lutz-77138020b/">SamuelLutz</a></p>
-        </main>
-        <main id="Resume" class="text-color" class="Projects">
-           <h2>Resume</h2>
         </main>
     </article>
     <footer>
