added correct h1 tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>massive header</h1>
+        <h1>Samuels Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#Projects">Projects</a></li>
